# piksel

./: .env.example  eklenecekler.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
piksel-server/: .env.example  index.js  package-lock.json  package.json
src/: App.css  App.tsx  firebase.ts  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: AppShell.tsx  routes.tsx
src/features/auth/: types.ts
src/features/auth/components/: AuthView.tsx
src/features/auth/hooks/: useAuthFlow.ts
src/features/auth/services/: auth.service.ts
src/features/dm/: types.ts
src/features/dm/components/: DmRail.tsx  DmRailSkeleton.tsx  DmView.tsx
src/features/dm/hooks/: useDm.ts  useDmRailLoading.ts
src/features/dm/services/: dm.service.ts  e2ee.service.ts
src/features/friends/: types.ts
src/features/friends/components/: FriendsView.tsx
src/features/friends/hooks/: useFriends.ts
src/features/friends/services/: friends.service.ts
src/features/presence/: types.ts
src/features/presence/hooks/: usePresence.ts
src/features/presence/services/: presence.service.ts
src/features/profile/: types.ts
src/features/profile/components/: ProfileModals.tsx  ProfilePopup.tsx  ProfileView.tsx
src/features/settings/: types.ts
src/services/firebase/: firestore.service.ts  rtdb.service.ts  storage.service.ts
src/shared/components/: StatusDot.tsx
src/shared/utils/: url.ts
src/types/: common.ts  message.ts  theme.ts  user.ts
(+6 files in other folders)
